--- a/index.html
+++ b/index.html
@@ -9,11 +9,31 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-            mollitia facilis corporis saepe reiciendis amet voluptates vitae ut
-            at molestias deserunt asperiores voluptas laboriosam eligendi,
-            veniam fuga quos sint. Magni?
-        </p>
+        <main>
+            <!-- header -->
+            <header class="header">
+                <div class="content">
+                    <nav class="navbar">
+                        <!-- logo -->
+                        <img src="assets/img/logo.svg" alt="Bensnik." />
+
+                        <!-- navigation -->
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Features</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Resources</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+
+                        <!-- action -->
+                        <div class="actions">
+                            <a href="#" class="action-link">Sign in</a>
+                            <a href="#" class="btn action-btn">Sign up</a>
+                        </div>
+                    </nav>
+                </div>
+            </header>
+        </main>
     </body>
 </html>
