--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
                             <a href="#" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
+
+                    <div class="hero">
+                        <div class="info">
+                            <p class="sub-title">Welcome to Besnik Agency</p>
+                            <h1 class="title">
+                                Discover a place you'll love to live.
+                            </h1>
+                            <a href="#" class="desc"
+                                >Get the best real estate deals first, before
+                                they hit the mass market! HOT FORECLOSURE DEALS
+                                with one simple search</a
+                            >
+                            <!-- Call to action -->
+                            <a href="#" class="btn hero-cta">More About</a>
+                        </div>
+                    </div>
                 </div>
             </header>
         </main>
