--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                             <!-- Call to action -->
                             <a href="#" class="btn hero-cta">More About</a>
                         </div>
+                        <img
+                            src="/assets//img/hero-house.svg"
+                            alt="Discover a place you'll love to live"
+                            class="hero-house"
+                        />
                     </div>
                 </div>
             </header>
