--- a/index.html
+++ b/index.html
@@ -55,6 +55,32 @@
                     </div>
                 </div>
             </header>
+            <!-- client -->
+            <div class="clients">
+                <div class="content">
+                    <div class="row">
+                        <img src="/assets//img/logo.svg" alt="Bensnik." />
+                        <div class="stars">
+                            <img src="/assets/img/star.png" alt="star" />
+                            <img src="/assets/img/star.png" alt="star" />
+                            <img src="/assets/img/star.png" alt="star" />
+                            <img src="/assets/img/star.png" alt="star" />
+                            <img src="/assets/img/star.png" alt="star" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <p>More than 45,000+ companies trust besnik</p>
+                        <p>5 Star Ratings (2k+ Review)</p>
+                    </div>
+                    <div class="images">
+                        <img src="/assets/img/client-1.svg" alt="client-1" />
+                        <img src="/assets/img/client-2.svg" alt="client-2" />
+                        <img src="/assets/img/client-3.svg" alt="client-3" />
+                        <img src="/assets/img/client-4.svg" alt="client-4" />
+                        <img src="/assets/img/client-5.svg" alt="client-5" />
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
