--- a/index.html
+++ b/index.html
@@ -1,86 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <link rel="stylesheet" href="./assets/css/reset.css" />
-        <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
-        <link rel="stylesheet" href="./assets/css/styles.css" />
-    </head>
-    <body>
-        <main>
-            <!-- header -->
-            <header class="header">
-                <div class="content">
-                    <nav class="navbar">
-                        <!-- logo -->
-                        <img src="assets/img/logo.svg" alt="Bensnik." />
 
-                        <!-- navigation -->
-                        <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Features</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Resources</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+</head>
 
-                        <!-- action -->
-                        <div class="actions">
-                            <a href="#" class="action-link">Sign in</a>
-                            <a href="#" class="btn action-btn">Sign up</a>
-                        </div>
-                    </nav>
+<body>
+    <main>
+        <!-- header -->
+        <header class="header">
+            <div class="content">
+                <nav class="navbar">
+                    <!-- logo -->
+                    <img src="assets/img/logo.svg" alt="Bensnik." />
 
-                    <div class="hero">
-                        <div class="info">
-                            <p class="sub-title">Welcome to Besnik Agency</p>
-                            <h1 class="title">
-                                Discover a place you'll love to live.
-                            </h1>
-                            <a href="#" class="desc"
-                                >Get the best real estate deals first, before
-                                they hit the mass market! HOT FORECLOSURE DEALS
-                                with one simple search</a
-                            >
-                            <!-- Call to action -->
-                            <a href="#" class="btn hero-cta">More About</a>
-                        </div>
-                        <img
-                            src="/assets//img/hero-house.svg"
-                            alt="Discover a place you'll love to live"
-                            class="hero-house"
-                        />
+                    <!-- navigation -->
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Resources</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+
+                    <!-- action -->
+                    <div class="actions">
+                        <a href="#" class="action-link">Sign in</a>
+                        <a href="#" class="btn action-btn">Sign up</a>
                     </div>
-                </div>
-            </header>
-            <!-- client -->
-            <div class="clients">
-                <div class="content">
-                    <div class="row">
-                        <img src="/assets//img/logo.svg" alt="Bensnik." />
-                        <div class="stars">
-                            <img src="/assets/img/star.png" alt="star" />
-                            <img src="/assets/img/star.png" alt="star" />
-                            <img src="/assets/img/star.png" alt="star" />
-                            <img src="/assets/img/star.png" alt="star" />
-                            <img src="/assets/img/star.png" alt="star" />
-                        </div>
+                </nav>
+
+                <div class="hero">
+                    <div class="info">
+                        <p class="sub-title">Welcome to Besnik Agency</p>
+                        <h1 class="title">
+                            Discover a place you'll love to live.
+                        </h1>
+                        <a href="#" class="desc">Get the best real estate deals first, before
+                            they hit the mass market! HOT FORECLOSURE DEALS
+                            with one simple search</a>
+                        <!-- Call to action -->
+                        <a href="#" class="btn hero-cta">More About</a>
                     </div>
-                    <div class="row">
-                        <p>More than 45,000+ companies trust besnik</p>
-                        <p>5 Star Ratings (2k+ Review)</p>
-                    </div>
-                    <div class="images">
-                        <img src="/assets/img/client-1.svg" alt="client-1" />
-                        <img src="/assets/img/client-2.svg" alt="client-2" />
-                        <img src="/assets/img/client-3.svg" alt="client-3" />
-                        <img src="/assets/img/client-4.svg" alt="client-4" />
-                        <img src="/assets/img/client-5.svg" alt="client-5" />
-                    </div>
+                    <img src="/assets//img/hero-house.svg" alt="Discover a place you'll love to live"
+                        class="hero-house" />
                 </div>
             </div>
-        </main>
-    </body>
+        </header>
+        <!-- client -->
+        <div class="clients">
+            <div class="content">
+                <div class="row">
+                    <img src="/assets//img/logo.svg" alt="Bensnik." />
+                    <div class="stars">
+                        <img src="/assets/img/star.png" alt="star" />
+                        <img src="/assets/img/star.png" alt="star" />
+                        <img src="/assets/img/star.png" alt="star" />
+                        <img src="/assets/img/star.png" alt="star" />
+                        <img src="/assets/img/star.png" alt="star" />
+                    </div>
+                </div>
+                <div class="row">
+                    <p>More than 45,000+ companies trust besnik</p>
+                    <p>5 Star Ratings (2k+ Review)</p>
+                </div>
+                <div class="images">
+                    <img src="/assets/img/client-1.svg" alt="client-1" />
+                    <img src="/assets/img/client-2.svg" alt="client-2" />
+                    <img src="/assets/img/client-3.svg" alt="client-3" />
+                    <img src="/assets/img/client-4.svg" alt="client-4" />
+                    <img src="/assets/img/client-5.svg" alt="client-5" />
+                </div>
+            </div>
+        </div>
+
+        <!-- Guides -->
+        <div class="guides">
+            <div class="content">
+                <div class="line"></div>
+                <h2 class="sub-title">
+                    How its works?
+                </h2>
+                <p class="desc">Everything you need to know when you're looking to buy, rent, or sell - all in one
+                    place.</p>
+                <div class="list-guide">
+                    <div class="guide-item">
+                        <img src="/assets/img/buyer-guides.svg" alt="buyer">
+                        <h3 class="title">Buyer Guides</h3>
+                        <a href="#"><span>How to buy</span>
+                            <img src="/assets/img/arrow-right.svg" alt="arrow right">
+                        </a>
+                    </div>
+
+                    <div class="guide-item">
+                        <img src="/assets/img/render-guiders.svg" alt="buyer">
+                        <h3 class="title">Render Guides</h3>
+                        <a href="#"><span>How to rent</span>
+                            <img src="/assets/img/arrow-right.svg" alt="arrow right">
+                        </a>
+                    </div>
+
+                    <div class="guide-item">
+                        <img src="/assets/img/seller-guides.svg" alt="buyer">
+                        <h3 class="title">Seller Guides</h3>
+                        <a href="#"><span>How to sell</span>
+                            <img src="/assets/img/arrow-right.svg" alt="arrow right">
+                        </a>
+                    </div>
+                </div>
+                <a href="#" class="btn guides-btn">Sell Full Guidelines</a>
+            </div>
+        </div>
+    </main>
+</body>
+
 </html>
