--- a/index.html
+++ b/index.html
@@ -116,6 +116,26 @@
                 <a href="#" class="btn guides-btn">Sell Full Guidelines</a>
             </div>
         </div>
+
+        <!-- Featured -->
+        <div class="featured">
+            <div class="content">
+                <div class="header">
+                    <h2 class="sub-title">
+                        Featured Properties
+                    </h2>
+                    <div class="row">
+                        <p class="desc">
+                            Everything you need to know when you're looking
+                        </p>
+                        <a href="#!" class="link">
+                            <span>View All Properties</span>
+                            <img src="assets/img/arrow-right.svg" alt="arrow-right" class="arrow">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
