--- a/index.html
+++ b/index.html
@@ -134,6 +134,65 @@
                         </a>
                     </div>
                 </div>
+
+                <div class="list">
+                    <!-- item 1 -->
+                    <div class="item">
+                        <img src="assets/img/featured-1.avif" alt="Nikko Apartments" class="thumb">
+                        <div class="body">
+                            <h3 class="title">Nikko Apartments</h3>
+                            <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
+                            <div class="info">
+                                <img src="assets/img/bed-icon.svg" alt="" class="icon">
+                                <span class="label">5 Beds</span>
+
+                                <img src="assets/img/bed-icon.svg" alt="" class="icon">
+                                <span class="label">2 both</span>
+
+                                <img src="assets/img/bed-icon.svg" alt="" class="icon">
+                                <span class="label">2 both</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- item 2 -->
+                    <div class="item">
+                        <img src="assets/img/featured-2.jpg" alt="Nikko Apartments" class="thumb">
+                        <div class="body">
+                            <h3 class="title">CouCou Homestead</h3>
+                            <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
+                            <div class="info">
+                                <img src="assets/img/bed-icon.svg" alt="" class="icon">
+                                <span class="label">5 Beds</span>
+
+                                <img src="assets/img/bed-icon.svg" alt="" class="icon">
+                                <span class="label">2 both</span>
+
+                                <img src="assets/img/bed-icon.svg" alt="" class="icon">
+                                <span class="label">2 both</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- item 3 -->
+                    <div class="item">
+                        <img src="assets/img/featured-3.avif" alt="Nikko Apartments" class="thumb">
+                        <div class="body">
+                            <h3 class="title">CouCou Homestead</h3>
+                            <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
+                            <div class="info">
+                                <img src="assets/img/bed-icon.svg" alt="" class="icon">
+                                <span class="label">5 Beds</span>
+
+                                <img src="assets/img/bed-icon.svg" alt="" class="icon">
+                                <span class="label">2 both</span>
+
+                                <img src="assets/img/bed-icon.svg" alt="" class="icon">
+                                <span class="label">2 both</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
