--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
                 <div class="list">
                     <!-- item 1 -->
                     <div class="item">
-                        <img src="assets/img/featured-1.avif" alt="Nikko Apartments" class="thumb">
+                        <a href="#!"><img src="assets/img/featured-1.avif" alt="Nikko Apartments" class="thumb"></a>
                         <div class="body">
-                            <h3 class="title">Nikko Apartments</h3>
-                            <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
+                            <h3 class="title line-clamp"><a href="#!">Nikko Apartments</a></h3>
+                            <p class="desc line-clamp" style="--line-clamp: 3">8502 Preston Rd. Inglewood, Maine 98280
+                            </p>
                             <div class="info">
                                 <img src="assets/img/bed-icon.svg" alt="" class="icon">
                                 <span class="label">5 Beds</span>
@@ -157,10 +158,16 @@
 
                     <!-- item 2 -->
                     <div class="item">
-                        <img src="assets/img/featured-2.jpg" alt="Nikko Apartments" class="thumb">
+                        <a href="#!"><img src="assets/img/featured-2.jpg" alt="Nikko Apartments" class="thumb"></a>
                         <div class="body">
-                            <h3 class="title">CouCou Homestead</h3>
-                            <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
+                            <h3 class="title line-clamp"><a href="#!">Lorem ipsum dolor, sit amet consectetur
+                                    adipisicing elit.
+                                    Mollitia nostrum
+                                    natus dolores totam voluptatem maxime officia eius doloremque eum consequatur.</a>
+                            </h3>
+                            <p class="desc line-clamp" style="--line-clamp: 3">Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit. Explicabo,
+                                quaerat? Quis mollitia corrupti in cum praesentium eum at quam aspernatur?</p>
                             <div class="info">
                                 <img src="assets/img/bed-icon.svg" alt="" class="icon">
                                 <span class="label">5 Beds</span>
@@ -176,10 +183,11 @@
 
                     <!-- item 3 -->
                     <div class="item">
-                        <img src="assets/img/featured-3.avif" alt="Nikko Apartments" class="thumb">
+                        <a href="#!"><img src="assets/img/featured-3.avif" alt="Nikko Apartments" class="thumb"></a>
                         <div class="body">
-                            <h3 class="title">CouCou Homestead</h3>
-                            <p class="desc">8502 Preston Rd. Inglewood, Maine 98280</p>
+                            <h3 class="title line-clamp"><a href="#!">Loremipsum,dolorsitametconsecteturadipisicingelit.Rerumitaquequodrepellatprovidenteumaspernaturvoluptatumadipisciimpeditenimnecessitatibus.</a></h3>
+                            <p class="desc line-clamp" style="--line-clamp: 3">8502 Preston Rd. Inglewood, Maine 98280
+                            </p>
                             <div class="info">
                                 <img src="assets/img/bed-icon.svg" alt="" class="icon">
                                 <span class="label">5 Beds</span>
