--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="content">
                 <div class="row">
                     <div class="img-block">
-                        <img src="assets/img/stats-img.jpg" alt="stats" />
+                        <img src="assets/img/stats-img.jpg" alt="stats" class="image"/>
                     </div>
                     <div class="info">
                         <h2 class="sub-title">You've found a neighborhood you love.</h2>
@@ -222,6 +222,16 @@
                             for a while. In a recent Trulia survey, we found that five out
                             of six respondents said finding the right neighborhood
                         </div>
+                    </div>
+
+                    <!-- stats-trend -->
+                    <div class="stats-trend">
+                        <div class="row">
+                            <strong class="value">40.000+</strong>
+                            <img src="assets/img/arrow-trend-up.svg" alt="" class="icon">
+                        </div>
+                        <div class="desc">By avarage for 2 bedroom apments in San Francisco, CA</div>
+                        <div class="seperate"></div>
                     </div>
                 </div>
             </div>
