--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <!-- Stats  -->
         <div class="stats">
             <div class="content">
-                <div class="row">
+                <div class="row img-info">
                     <div class="img-block">
                         <img src="assets/img/stats-img.jpg" alt="stats" class="image"/>
                     </div>
@@ -227,11 +227,23 @@
                     <!-- stats-trend -->
                     <div class="stats-trend">
                         <div class="row">
-                            <strong class="value">40.000+</strong>
+                            <strong class="value">40.000<span class="plus">+</span></strong>
                             <img src="assets/img/arrow-trend-up.svg" alt="" class="icon">
                         </div>
                         <div class="desc">By avarage for 2 bedroom apments in San Francisco, CA</div>
                         <div class="seperate"></div>
+
+                        <div class="avatar-block">
+                            <div class="avatar-group">
+                                <img src="assets/img/avatars/avatar-1.jpg" alt="" class="avatar">
+                                <img src="assets/img/avatars/avatar-2.jpg" alt="" class="avatar">
+                            </div>
+
+                            <div class="avatar-group">
+                                <img src="assets/img/avatars/avatar-1.jpg" alt="" class="avatar">
+                                <img src="assets/img/avatars/avatar-2.jpg" alt="" class="avatar">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
