--- a/index.html
+++ b/index.html
@@ -240,10 +240,57 @@
                             </div>
 
                             <div class="avatar-group">
-                                <img src="assets/img/avatars/avatar-1.jpg" alt="" class="avatar">
+                                <img src="assets/img/avatars/avatar-3.jpg" alt="" class="avatar">
+                                <img src="assets/img/avatars/avatar-5.jpg" alt="" class="avatar">
+                                <img src="assets/img/avatars/avatar-6.jpg" alt="" class="avatar">
+                                <div class="avatar" style="--bg-color: #1F3BB1">P</div>
+                            </div>
+
+                            <!-- Group 3 -->
+                            <div class="avatar-group">
+                                <div class="avatar">P</div>
+                                <img src="assets/img/avatars/avatar-7.jpeg" alt="" class="avatar">
+                                <div class="avatar" style="--bg-color: #24D6D9">A</div>
+                            </div>
+
+                            <div class="avatar-group">
+                                <img src="assets/img/avatars/avatar-8.jpg" alt="" class="avatar">
+                                <img src="assets/img/avatars/avatar-9.jpg" alt="" class="avatar">
+                                <img src="assets/img/avatars/avatar-10.jpg" alt="" class="avatar">
+                                <div class="avatar" style="--bg-color: #F8C120">S</div>
+                            </div>
+
+                            <!-- group 5 -->
+                            <div class="avatar-group">
+                                <img src="assets/img/avatars/avatar-11.jpg" alt="" class="avatar">
+                                <div class="avatar" style="--bg-color: #F97F6B">JK</div>
+                            </div>
+
+                            <div class="avatar-group">
+                                <img src="assets/img/avatars/avatar-12.jpg" alt="" class="avatar">
+                                <div class="avatar" style="--bg-color: #73A242">Q</div>
+                            </div>
+
+                            <div class="avatar-group">
                                 <img src="assets/img/avatars/avatar-2.jpg" alt="" class="avatar">
+                                <div class="avatar" style="--bg-color: #1F3BB0">H</div>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="row row-qty">
+                    <div class="qty-item">
+                        <strong class="qty">2,500</strong>
+                        <p class="desc">Homes For Sale</p>
+                    </div>
+                    <div class="qty-item">
+                        <strong class="qty">5,000+</strong>
+                        <p class="desc">Homes Recently Sold</p>
+                    </div>
+                    <div class="qty-item">
+                        <strong class="qty">170+</strong>
+                        <p class="desc">Price Reduced</p>
                     </div>
                 </div>
             </div>
