--- a/index.html
+++ b/index.html
@@ -295,6 +295,18 @@
                 </div>
             </div>
         </div>
+
+        <!-- Subscription  -->
+        <div class="subscription">
+            <div class="content body">
+                <div class="info">
+                    <h2 class="sub-title">Subscribe to our Newsletter!</h2>
+                    <p class="desc">Subscribe to our newsletter and stay updated.</p>
+                    <a href="#!" class="btn">Subscribe</a>
+                </div>
+                <img src="assets/img/phone.svg" alt="">
+            </div>
+        </div>
     </main>
 </body>
 
