--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </a>
                     </div>
                 </div>
-                <a href="#" class="btn guides-btn">Sell Full Guidelines</a>
+                <a href="#!" class="btn guides-btn">Sell Full Guidelines</a>
             </div>
         </div>
 
@@ -213,7 +213,7 @@
             <div class="content">
                 <div class="row img-info">
                     <div class="img-block">
-                        <img src="assets/img/stats-img.jpg" alt="stats" class="image"/>
+                        <img src="assets/img/stats-img.jpg" alt="stats" class="image" />
                     </div>
                     <div class="info">
                         <h2 class="sub-title">You've found a neighborhood you love.</h2>
@@ -307,6 +307,90 @@
                 <img src="assets/img/phone.svg" alt="">
             </div>
         </div>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="content">
+                <div class="row row-top">
+                    <div class="column">
+                        <h3 class="heading">Product</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="#!">Listing</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Property</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Agents</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Blog</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="column">
+                        <h3 class="heading">Resources</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="#!">Our Homes</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Member Stories</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Video</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Free trial</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="column">
+                        <h3 class="heading">Company</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="#!">Patnerships</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Terms of use</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Privacy</a>
+                            </li>
+                            <li class="item">
+                                <a href="#!">Sitemap</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="column">
+                        <h3 class="heading">Get in touch</h3>
+                        <p class="desc">You’ll find your next home, in any style you prefer.</p>
+                        <div class="social">
+                            <a href="#!" class="social-link">
+                                <img src="assets/img/social-media-icon/facebook.svg" alt="facebook">
+                            </a>
+                            <a href="#!" class="social-link">
+                                <img src="assets/img/social-media-icon/linkedIn.svg" alt="linkedIn">
+                            </a>
+                            <a href="#!" class="social-link">
+                                <img src="assets/img/social-media-icon/X.svg" alt="X">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row row-bottom">
+                    <img src="/assets/img/logo.svg" alt="Bensnik.">
+                    <p class="copyright">
+                        Copyright 2020.com, All rights reserved.
+                    </p>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 
