--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="assets/css/styles.css" />
     </head>
     <body>
+        <!-- header -->
         <header class="fixed">
             <div class="content">
                 <div class="body">
@@ -50,6 +51,93 @@
                 </div>
             </div>
         </header>
-        <main style="height: 1000px;"></main>
+        <main style="height: 1000px">
+            <!-- hero -->
+            <div class="hero">
+                <div class="content">
+                    <div class="body">
+                        <div class="media-block">
+                            <img
+                                src="assets/img/guy-lesson.png"
+                                alt="Learn without limits and spread knowledge."
+                            />
+                            <div class="hero-info">
+                                <div class="item">
+                                    <div class="icon">
+                                        <img
+                                            src="./assets/icons/list.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="label">20 Courses</p>
+                                        <p class="title">UI/UX Design</p>
+                                    </div>
+                                </div>
+
+                                <div class="item">
+                                    <div class="icon">
+                                        <img
+                                            src="./assets/icons/code.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="label">20 Courses</p>
+                                        <p class="title">Developments</p>
+                                    </div>
+                                </div>
+
+                                <div class="item">
+                                    <div class="icon">
+                                        <img
+                                            src="./assets/icons/speaker.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="info">
+                                        <p class="label">30 Courses</p>
+                                        <p class="title">Marketing</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="hero-summary">
+                            <h1 class="title">
+                                Learn without limits and spread knowledge.
+                            </h1>
+                            <p class="desc">
+                                Build new skills for that “this is my year”
+                                feeling with courses, certificates, and degrees
+                                from world-class universities and companies.
+                            </p>
+
+                            <!-- Call to action -->
+                            <div class="cta">
+                                <a href="#!" class="btn btn-2 btn-see-courses"
+                                    >See Courses</a
+                                >
+
+                                <button class="watch-video">
+                                    <div class="icon">
+                                        <img
+                                            src="./assets/icons/play.svg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <span>Watch Video</span>
+                                </button>
+                            </div>
+
+                            <p class="desc">Recent engagement</p>
+                            <div class="desc stats">
+                                <p><strong>50k</strong>Students</p>
+                                <p><strong>70+</strong>Courses</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
