--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                         <div class="hero-summary">
-                            <h1 class="title">
+                            <h1 class="heading">
                                 Learn without limits and spread knowledge.
                             </h1>
                             <p class="desc">
@@ -134,6 +134,56 @@
                                 <p><strong>50k</strong>Students</p>
                                 <p><strong>70+</strong>Courses</p>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- popular -->
+            <div class="popular">
+                <div class="content">
+                    <div class="popular-top">
+                        <div class="info">
+                            <h2 class="heading">Our popular courses</h2>
+                            <div class="desc">
+                                Build new skills with new trendy courses and
+                                shine for the next future career.
+                            </div>
+                        </div>
+                        <div class="controls">
+                            <button class="control-btn">
+                                <!-- <img src="assets/icons/chevron-left.svg" alt=""> -->
+                                <svg
+                                    width="8"
+                                    height="14"
+                                    viewBox="0 0 8 14"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        d="M7 1L1 7L7 13"
+                                        stroke="#FFB900"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
+                            <button class="control-btn">
+                                <svg
+                                    width="8"
+                                    height="14"
+                                    viewBox="0 0 8 14"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                        d="M1 1L7 7L1 13"
+                                        stroke="white"
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                    />
+                                </svg>
+                            </button>
                         </div>
                     </div>
                 </div>
