--- a/index.html
+++ b/index.html
@@ -186,6 +186,101 @@
                             </button>
                         </div>
                     </div>
+
+                    <div class="course-list">
+                        <!-- course-item 1 -->
+                        <div class="course-item">
+                            <a href="#!">
+                                <img
+                                    src="assets/img/course-1.jpg"
+                                    alt="Basic web design"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <div class="head">
+                                    <h3 class="title">Basic web design</h3>
+                                    <div class="rating">
+                                        <img
+                                            src="assets/icons/star.svg"
+                                            alt=""
+                                        />
+                                        <span>4.5</span>
+                                    </div>
+                                </div>
+                                <p class="desc">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+                                <div class="foot">
+                                    <div class="price">$120.75</div>
+                                    <div class="btn">Book Now</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- course-item 2 -->
+                        <div class="course-item">
+                            <a href="#!">
+                                <img
+                                    src="assets/img/course-2.jpg"
+                                    alt="UI/UX design"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <div class="head">
+                                    <h3 class="title">UI/UX design</h3>
+                                    <div class="rating">
+                                        <img
+                                            src="assets/icons/star.svg"
+                                            alt=""
+                                        />
+                                        <span>4.6</span>
+                                    </div>
+                                </div>
+                                <p class="desc">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+                                <div class="foot">
+                                    <div class="price">$120.75</div>
+                                    <div class="btn">Book Now</div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- course-item 3 -->
+                        <div class="course-item">
+                            <a href="#!">
+                                <img
+                                    src="assets/img/course-3.jpg"
+                                    alt="Web App design"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <div class="head">
+                                    <h3 class="title">Web App design</h3>
+                                    <div class="rating">
+                                        <img
+                                            src="assets/icons/star.svg"
+                                            alt=""
+                                        />
+                                        <span>4.8</span>
+                                    </div>
+                                </div>
+                                <p class="desc">
+                                    Get the best course, gain knowledge and
+                                    shine for your future career.
+                                </p>
+                                <div class="foot">
+                                    <div class="price">$120.75</div>
+                                    <div class="btn">Book Now</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
