--- a/index.html
+++ b/index.html
@@ -283,6 +283,44 @@
                     </div>
                 </div>
             </div>
+
+            <!-- feedback -->
+            <div class="feedback">
+                <div class="content">
+                    <div class="feedback-list">
+                        <div class="feedback-item">
+                            <div class="info">
+                                <img
+                                    src="assets/img/feedback-avatar-1.jpg"
+                                    alt="Peter Moor"
+                                    class="avatar"
+                                />
+                                <div class="title">Peter Moor</div>
+                                <div class="desc">Student of Web Design</div>
+                                <div class="dots">
+                                    <span class="dot"></span>
+                                    <span class="dot active"></span>
+                                    <span class="dot"></span>
+                                </div>
+                            </div>
+                            <div class="feedback-content">
+                                <img
+                                    src="assets/icons/open-quotes.svg"
+                                    alt=""
+                                />
+                                <p>
+                                    Not only does my resume look
+                                    impressive—filled with the names and logos
+                                    of world-class institutions—but these
+                                    certificates also bring me closer to my
+                                    career goals by validating the skills I've
+                                    learned."
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
