--- a/index.html
+++ b/index.html
@@ -321,6 +321,37 @@
                     </div>
                 </div>
             </div>
+
+            <!-- features -->
+            <div class="features">
+                <div class="content">
+                    <div class="body">
+                        <div class="images">
+                            <img
+                                class="lower"
+                                src="assets/img/feature-1.jpg"
+                                alt="Learner outcomes through our awesome platform"
+                            />
+                            <img
+                                src="assets/img/feature-2.jpg"
+                                alt="Learner outcomes through our awesome platform"
+                            />
+                        </div>
+                        <div class="features-content">
+                            <h2 class="heading">
+                                Learner outcomes through our awesome platform
+                            </h2>
+                            <p class="desc">
+                                87% of people learning for professional
+                                development report career benefits like getting
+                                a promotion, a raise, or starting a new career.
+                            </p>
+                            <p class="desc">Lesson Impact Report (2022)</p>
+                            <a href="#!" class="btn btn-2">Sign Up</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
