--- a/index.html
+++ b/index.html
@@ -352,6 +352,33 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Features 2 -->
+            <div class="content">
+                <div class="features features-2nd">
+                    <div class="body">
+                        <div class="images">
+                            <img
+                                src="assets/img/feature-3.jpg"
+                                alt="Take the next step toward your personal and
+                            professional goals with Lesson."
+                            />
+                        </div>
+                        <div class="features-content">
+                            <h2 class="heading">
+                                Take the next step toward your personal and
+                                professional goals with Lesson.
+                            </h2>
+                            <p class="desc">
+                                Take the next step toward. Join now to receive
+                                personalized and more recommendations from the
+                                full Coursera catalog.
+                            </p>
+                            <a href="#!" class="btn btn-2">Join now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
