--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </header>
-        <main style="height: 1000px">
+        <main>
             <!-- hero -->
             <div class="hero">
                 <div class="content">
@@ -379,6 +379,171 @@
                     </div>
                 </div>
             </div>
+
+            <!-- blog -->
+            <div class="blog">
+                <div class="content">
+                    <div class="body">
+                        <h2 class="heading">Our blog</h2>
+                        <p class="desc">
+                            Read our regular travel blog and know the latest
+                            update of tour and travel
+                        </p>
+                        <div class="blog-list">
+                            <!-- blog item 1 -->
+                            <div class="blog-item">
+                                <a href="#!">
+                                    <img
+                                        src="assets/img/blog-1.jpg"
+                                        alt="How to become a pro web designer in 2022 and get remot job?"
+                                    />
+                                </a>
+                                <div class="info">
+                                    <div class="date">
+                                        <span class="dot"></span>
+                                        <span>21 November 2021</span>
+                                    </div>
+                                    <h3 class="title">
+                                        <a href="#!">
+                                            How to become a pro web designer in
+                                            2022 and get remot job?</a
+                                        >
+                                    </h3>
+                                    <a href="#!" class="btn">Buy now</a>
+                                </div>
+                            </div>
+
+                            <!-- blog item 2 -->
+                            <div class="blog-item">
+                                <a href="#!">
+                                    <img
+                                        src="assets/img/blog-2.jpg"
+                                        alt="How to become a pro web designer in 2022 and get remot job?"
+                                    />
+                                </a>
+                                <div class="info">
+                                    <div class="date">
+                                        <span class="dot"></span>
+                                        <span>21 November 2021</span>
+                                    </div>
+                                    <h3 class="title">
+                                        <a href="#!">
+                                            How to become a pro web designer in
+                                            2022 and get remot job?</a
+                                        >
+                                    </h3>
+                                    <a href="#!" class="btn">Buy now</a>
+                                </div>
+                            </div>
+                            <!-- blog item 3 -->
+                            <div class="blog-item">
+                                <a href="#!">
+                                    <img
+                                        src="assets/img/blog-3.jpg"
+                                        alt="How to become a pro web designer in 2022 and get remot job?"
+                                    />
+                                </a>
+                                <div class="info">
+                                    <div class="date">
+                                        <span class="dot"></span>
+                                        <span>21 November 2021</span>
+                                    </div>
+                                    <h3 class="title">
+                                        <a href="#!">
+                                            How to become a pro web designer in
+                                            2022 and get remot job?</a
+                                        >
+                                    </h3>
+                                    <a href="#!" class="btn">Buy now</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="dots">
+                            <span class="dot"></span>
+                            <span class="dot active"></span>
+                            <span class="dot"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
+
+        <!-- footer -->
+        <footer>
+            <div class="content">
+                <div class="row-top">
+                    <div class="column">
+                        <img src="assets/icons/logo.svg" alt="" />
+                        <p class="desc">
+                            Need to help for your dream Career? trust us. With
+                            Lesson, study becomes a lot easier with us.
+                        </p>
+                        <div class="socials">
+                            <a href="#!">
+                                <img
+                                    src="assets/icons/twitter.svg"
+                                    alt="twitter"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="assets/icons/facebook.svg"
+                                    alt="facebook"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="assets/icons/instagram.svg"
+                                    alt="instagram"
+                                />
+                            </a>
+                            <a href="#!">
+                                <img
+                                    src="assets/icons/linkedin.svg"
+                                    alt="linkedin"
+                                />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h3 class="title">Company</h3>
+                        <ul class="list">
+                            <li class="item">About Us</li>
+                            <li class="item">Features</li>
+                            <li class="item">Our Pricing</li>
+                            <li class="item">Latest News</li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="title">Support</h3>
+                        <ul class="list">
+                            <li class="item">FAQ's</li>
+                            <li class="item">Terms & Conditions</li>
+                            <li class="item">Privacy Policy</li>
+                            <li class="item">Contact Us</li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="title">Address</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <strong>Location:</strong> 27 Division St, New
+                                York, NY 10002, USA
+                            </li>
+                            <li class="item">
+                                <strong>Email:</strong> email@gmail.com
+                            </li>
+                            <li class="item">
+                                <strong>Phone:</strong> + 000 1234 567 890
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p>Copyright ©2022 webdesign.gdn All rights reserved</p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
