--- a/index.html
+++ b/index.html
@@ -199,7 +199,10 @@
                             </a>
                             <div class="info">
                                 <div class="head">
-                                    <h3 class="title">Basic web design</h3>
+                                    <h3 class="title line-clamp">
+                                        Basic web design Basic web design Basic
+                                        web design
+                                    </h3>
                                     <div class="rating">
                                         <img
                                             src="assets/icons/star.svg"
@@ -208,9 +211,11 @@
                                         <span>4.5</span>
                                     </div>
                                 </div>
-                                <p class="desc">
-                                    Get the best course, gain knowledge and
-                                    shine for your future career.
+                                <p class="desc line-clamp line-2 break-all">
+                                    Getthebestcourse,gainknowledgeand
+                                    shineforyourfuturecareer.
+                                    Getthebestcourse,gainknowledgeand
+                                    shineforyourfuturecareer.
                                 </p>
                                 <div class="foot">
                                     <div class="price">$120.75</div>
