add a tag for title

--- a/index.html
+++ b/index.html
@@ -200,8 +200,10 @@
                             <div class="info">
                                 <div class="head">
                                     <h3 class="title line-clamp">
-                                        Basic web design Basic web design Basic
-                                        web design
+                                        <a href="#!">
+                                            Basic web design Basic web design
+                                            Basic web design
+                                        </a>
                                     </h3>
                                     <div class="rating">
                                         <img
@@ -235,7 +237,9 @@
                             </a>
                             <div class="info">
                                 <div class="head">
-                                    <h3 class="title">UI/UX design</h3>
+                                    <h3 class="title">
+                                        <a href="#!">UI/UX design</a>
+                                    </h3>
                                     <div class="rating">
                                         <img
                                             src="assets/icons/star.svg"
@@ -266,7 +270,9 @@
                             </a>
                             <div class="info">
                                 <div class="head">
-                                    <h3 class="title">Web App design</h3>
+                                    <h3 class="title">
+                                        <a href="#!"> App design</a>
+                                    </h3>
                                     <div class="rating">
                                         <img
                                             src="assets/icons/star.svg"
