--- a/index.html
+++ b/index.html
@@ -215,6 +215,26 @@
                 </div>
             </div>
         </section>
+        <section class="feature">
+            <div class="container">
+                <div class="feature__inner">
+                    <div class="feature__media">
+                        <figure class="feature__images">
+                            <img src="/assets/img/feature-01.jpg" alt="" class="feature__img">
+                            <img src="/assets/img/feature-02.jpg" alt="" class="feature__img">
+                        </figure>
+                    </div>
+                    <div class="feature__content">
+                        <h2 class="feature__heading">Take back your smile with shine.</h2>
+                        <p class="feature__desc">
+                            If you're missing multiple teeth due to decay, injury, or the natural aging process,
+                            dentures might be the perfect solution.
+                        </p>
+                        <a href="#!" class="btn">Learn more</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
