--- a/index.html
+++ b/index.html
@@ -255,11 +255,32 @@
                             <img src="./assets/img/avatar2.jpg" alt="avatar" class="about-team__img">
                             <img src="./assets/img/avatar3.jpg" alt="avatar" class="about-team__img">
                             <img src="./assets/img/avatar4.jpg" alt="avatar" class="about-team__img">
-                        
+
                         </figure>
                     </div>
                 </div>
 
+            </div>
+        </section>
+
+        <!-- process -->
+        <section class="process">
+            <div class="container process-body">
+                <div class="sub-heading">
+                    OUR PROCESS
+                </div>
+                <h2 class="headling headling__decor">A simple,yet effective three step process</h2>
+
+                <div class="process-list">
+                    <div class="process-item">
+                        <p class="process-index">01.</p>
+                        <div class="process-heading">
+                            <div class="process__name">Project idea</div>
+                        </div>
+                        <p class="process-desc">We customse a ensure aligment and difine key mileones and defiverables
+                            experience tells us the best solutions are the ones deated with clients.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
